base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rethinkdb-fastapi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rethinkdb-fastapi
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rethinkdb-fastapi
    spec:
      containers:
        - image: alexandernikitin/rethinkdb-fastapi:latest
          imagePullPolicy: Always
          name: rethinkdb-fastapi
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
