base/services.yml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb-client
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: rethinkdb-client
